# MIESC

./: .coverage 2  .coverage 3  .coverage 4  .coverage 5  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS_VISUAL_GUIDE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COLORS_FIX_COMPLETE.md  COMPLIANCE.md  CONTRIBUTING.md  CONTRIBUTING_ES.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_STATUS.md  DPG-COMPLIANCE.md  DPGA_Application_Responses.csv  DPG_COMPLIANCE.md  DPG_SUBMISSION_CHECKLIST.md  Dockerfile  Dockerfile.full  Dockerfile.optimized  Dockerfile.x86  EMPEZAR_AQUI.md  EVALUATION_REPORT_v4.1.md  FIX_GIT_AND_COMMIT.sh  GITHUB_PAGES_SETUP.md  GUIA_DEFENSA_TESIS.md  HTML_REPORT_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  INSTALL_SIMPLE.md  MANIFEST.in  MIESC_Informe_Academico_Desarrollo.docx  (+63 more)
.claude/: TODO.md
.github/: CODEOWNERS  CODE_OF_CONDUCT_ES.md  CONTRIBUTING.md  CONTRIBUTING_ES.md  CONTRIBUTORS.md  FUNDING.yml  GOVERNANCE.md  MAINTENANCE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  SUPPORT_ES.md  dependabot.yml
.streamlit/: config.toml
AGENT_EXECUTION_LOOPS/: index.html
ANNOUNCE_DRAFT/: index.html
ARCHITECTURE/: index.html
ARCHITECTURE_PATTERNS/: index.html
CHANGELOG/: index.html
CODEX_INTEGRATION_READINESS_20260628/: index.html
CODEX_INTEGRATION_READINESS_20260701/: index.html
CODE_OF_CONDUCT/: index.html
COMMUNITY/: index.html
COMPARISON/: index.html
CONTRIBUTING/: index.html
CONTRIBUTORS/: index.html
CUSTOM_DETECTORS/: index.html
DEFENSA_TESIS_SLIDES/: index.html
DEMO_AUDIT_REPORT/: index.html
EVALUATION_REPORT_v4.1/: index.html
IMPROVEMENT_PLAN/: index.html
IMPROVEMENT_PLAN_ES/: index.html
INSTALLATION/: index.html
INSTALLATION_ES/: index.html
LLM_PROVIDER_READINESS_20260629/: index.html
MIESC_Evaluation_Report/: index.html
MULTICHAIN/: index.html
NEXT_STEPS_vnext_20260621/: index.html
PAPER2_POST_FIFTYFLIP_FULL_AUDIT_20260630/: index.html
PAPER2_POST_SPANK_PROMOTION_AUDIT_20260630/: index.html
PAPER2_REENTRANCY_RESIDUAL_TRIAGE_20260630/: index.html
PAPER2_RESIDUAL_MATRIX_20260629/: index.html
PAPER2_VNEXT_BASELINE_DECISION_20260628/: index.html
PAPER2_VNEXT_PROMOTION_AUDIT_20260628/: index.html
PAPER_BASELINE_READINESS_20260621/: index.html
PLAN_v4.7.0/: index.html
PRE_RELEASE_AUDIT_v5.1.7/: index.html
RELEASE_NOTES_v4.0.0/: index.html
RELEASE_NOTES_v4.2.3/: index.html
RELEASE_NOTES_v4.3.0/: index.html
RELEASE_NOTES_v4.3.2/: index.html
RELEASE_NOTES_v4.6.0/: index.html
RELEASE_NOTES_v4.7.0/: index.html
RELEASE_NOTES_v5.4.0/: index.html
ROADMAP/: index.html
ROADMAP_v5.2_v5.3/: index.html
SDD_TRANSIENT_STORAGE_DETECTION_20260709/: index.html
SECURITY/: index.html
SECURITY_AUDIT_REPORT/: index.html
SECURITY_AUDIT_REPORT_ES/: index.html
SECURITY_ES/: index.html
SECURITY_ISSUES_BACKLOG/: index.html
TOOLS/: index.html
TOOL_DIAGNOSTIC_REPORT/: index.html
VALIDATION_GUIDE/: index.html
_static/: custom.css
adr/: index.html
agents/: __init__.py  base_agent.py  dynamic_agent.py  gptscan_agent.py  llm_smartaudit_agent.py  policy_agent.py  smartllm_agent.py  static_agent.py  symbolic_agent.py
api/: agents.rst  changelog.html  contributing.html  core.rst  genindex.html  index.html  installation.html  llm.rst  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
architecture/: layers.rst
archive/: index.html
benchmark_results/: benchmark_20251108_054547.json  benchmark_latest.json
benchmarks/: ablation_study.py  ablation_to_latex.py  audit_paper2_experiment.py  baseline.json  build_datasets.py  check_regression.py  comparative_benchmark.py  competitor_comparison.py  complete_evaluation.py  correlation_benchmark.py  correlation_evaluation.py  deep_audit_rekt.py  deep_audit_rekt_llm.py  etherscan_distribution.py  evaluate_exploits.py  evaluate_extended_exploits.py  evmbench_compare_table.py  evmbench_eval.py  evmbench_official_detect.py  experiment_example.yaml  fix_eval.py  generate_charts.py  generate_paper1_artifacts.py  generate_paper2_artifacts.py  integrated_evaluation.py  mcnemar_ablation.py  p2b_scale_eval.py  reproduce_benchmark.py  run_benchmark.py  run_benchmarks.py  scalability_benchmark.py  smartbugs_evaluation.py  solidifi_benchmark.py
config/: .env.example  config.py  miesc.yaml  model_optimization.yml  ollama_models.yml  profiles.yaml  requirements_core 2.txt
crytic-export/: combined_solc.json
css/: styles.css
data/: benchmark_improved.json  fp_seed.jsonl  licenses.db
defensa_20251011/: demo_practica.txt
demo/: HACKER_DEMO_README.md  THESIS_DEFENSE_README.md  VulnerableVault.sol  hacker_demo.py  miesc-demo.cast  record_youtube_video.sh  video_auto.sh  video_demo.sh  youtube_demo_v2.sh
demo_contracts/: VulnerableBank.sol
docker/: Dockerfile  Dockerfile.full  Dockerfile.prod  Dockerfile.x86  docker-compose.prod-llm.yml  docker-compose.prod.yml  docker-compose.yml  ecs-task-definition.json  health-check.sh
docs/: 00_OVERVIEW.md  00_RESEARCH_DESIGN.md  01_ARCHITECTURE.md  02_SETUP_AND_USAGE.md  03_DEMO_GUIDE.md  04_AI_CORRELATION.md  05_POLICY_AGENT.md  07_MCP_INTEROPERABILITY.md  08_METRICS_AND_RESULTS.md  09_THEORETICAL_FOUNDATION.md  ADERYN_ADAPTER.md  AGENTS_EXPLAINED.md  AGENT_DEVELOPMENT_GUIDE.md  AGENT_EXECUTION_LOOPS.md  AGENT_ORCHESTRATION_GUIDE.md  AI_ARCHITECTURE.md  AI_INTEGRATION_SUMMARY.md  ANNOUNCE_DRAFT.md  API_SETUP.md  ARCHITECTURE.md  ARCHITECTURE_PATTERNS.md  CHANGELOG.md  CODEX_INTEGRATION_READINESS_20260628.md  CODEX_INTEGRATION_READINESS_20260701.md  COMMUNITY.md  COMPARISON.md  CONTRIBUTING.md  CONTRIBUTORS.md  CUSTOM_DETECTORS.md  DATASET_METHODOLOGY.md  DEFENSA_TESIS_SLIDES.md  DEMO_AUDIT_REPORT.md  DEMO_GUIDE.md  DEVELOPER_GUIDE.md  DEVSECOPS.md  DOCKER.md  DPGA_Application_Responses.csv  DPG_COMPLIANCE.md  ENHANCED_REPORTS.md  EVALUATION_REPORT_v4.1.md  (+126 more)
evaluation_results/: rag_benchmark_2026-02-06_13-12-33.json  rag_benchmark_2026-02-06_13-13-26.json  rag_benchmark_2026-02-06_13-14-55.json  (+15 more)
js/: main.js
(+2108 files in other folders)
