[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "miesc"
version = "4.2.0"
description = "Multi-layer Intelligent Evaluation for Smart Contracts - AI-enhanced MCP-compatible blockchain security framework"
readme = "README.md"
authors = [
    {name = "Fernando Boiero", email = "fboiero@frvm.utn.edu.ar"}
]
license = {text = "GPL-3.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = [
    "blockchain",
    "ethereum",
    "smart-contracts",
    "security",
    "static-analysis",
    "formal-verification",
    "vulnerability-detection",
    "mcp",
    "model-context-protocol"
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "slither-analyzer>=0.10.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all-tools = [
    "mythril>=0.24.0",
    "web3>=6.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
metrics = [
    "prometheus-client>=0.19.0",
]
cli = [
    "rich>=13.0.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
]
full = [
    "prometheus-client>=0.19.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "mythril>=0.24.0",
    "web3>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/fboiero/MIESC"
Documentation = "https://fboiero.github.io/MIESC"
Repository = "https://github.com/fboiero/MIESC.git"
"Bug Tracker" = "https://github.com/fboiero/MIESC/issues"

[project.scripts]
miesc = "miesc.cli.main:cli"

[tool.setuptools]
packages = [
    "miesc",
    "miesc.core",
    "miesc.api",
    "miesc.cli",
    "miesc.adapters",
    "miesc.agents",
    "miesc.security",
    "miesc.ml",
    "miesc.mcp"
]

[tool.setuptools.package-data]
miesc = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "miesc/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=miesc --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src", "miesc"]
omit = [
    # Legacy standalone tools (deprecated in v4.0+)
    "src/*_tool.py",
    "src/main.py",
    "src/utils.py",
    # Legacy CLI modules (replaced by miesc.cli)
    "src/miesc_cli.py",
    "src/miesc_core.py",
    "src/miesc_ai_layer.py",
    "src/miesc_mcp_adapter.py",
    "src/miesc_mcp_rest.py",
    "src/miesc_ml_cli.py",
    "src/miesc_websocket_api.py",
    "src/miesc_policy_agent.py",
    "src/miesc_policy_mapper.py",
    "src/miesc_risk_engine.py",
    "src/miesc_security_checks.py",
    # Legacy analysis modules
    "src/orchestrator.py",
    "src/project_analyzer.py",
    "src/report_formatter.py",
    "src/audit_generator.py",
    "src/graph_visualizer.py",
    # Internal test fixtures
    "src/miesc_tests/*",
    # Licensing module (separate product)
    "src/licensing/*",
    # Detectors with external dependencies
    "src/detectors/smartbugs_detectors.py",
    # Duplicate/backup files
    "src/agents/symbolic_agent 2.py",
    # Additional legacy/utility modules (v3.x)
    "src/GPTLens_prompts.py",
    "src/summarize_information.py",
    "src/test_generator.py",
    "src/text_generator.py",
    # Experimental agents (not production)
    "src/agents/crewai_coordinator.py",
    "src/agents/slither_protocol_agent.py",
    # Tool wrapper agents (require external tools: Mythril, Echidna, etc.)
    "src/agents/dynamic_agent.py",
    "src/agents/formal_agent.py",
    "src/agents/symbolic_agent.py",
    "src/agents/coordinator_agent.py",
    "src/agents/static_agent.py",
    "src/agents/gptscan_agent.py",
    "src/agents/halmos_agent.py",
    "src/agents/medusa_agent.py",
    "src/agents/smtchecker_agent.py",
    "src/agents/wake_agent.py",
    # LLM-dependent agents (require Ollama/external models)
    "src/agents/ollama_agent.py",
    "src/agents/llm_smartaudit_agent.py",
    # Analysis agents (complex orchestration dependencies)
    "src/agents/policy_agent.py",
    "src/agents/interpretation_agent.py",
    "src/agents/recommendation_agent.py",
    # Audit readiness module (specialized)
    "src/agents/audit_readiness/*",
    # LLM helpers (external dependency heavy)
    "src/llm/*",
    # Integration module (requires full stack)
    "src/integration/*",
    # Dependency analyzer (specialized)
    "src/detectors/dependency_analyzer.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 50
show_missing = true
