[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miesc"
dynamic = ["version"]
description = "Multi-layer Intelligent Evaluation for Smart Contracts - Open-source framework that brings enterprise-grade security analysis to every developer"
readme = "README.md"
authors = [
    {name = "Fernando Boiero", email = "fboiero@frvm.utn.edu.ar"}
]
license = "AGPL-3.0-only"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
keywords = [
    "blockchain",
    "ethereum",
    "smart-contracts",
    "security",
    "static-analysis",
    "formal-verification",
    "vulnerability-detection",
    "mcp",
    "model-context-protocol"
]
requires-python = ">=3.12"
# Core dependencies - minimal for CLI usage
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "slither-analyzer>=0.10.0",
    # Required for CLI output (137 console.print sites across miesc/cli/commands/).
    # Without rich the analyze/report/audit commands crash with
    # AttributeError: 'NoneType' object has no attribute 'print'.
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<10",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "black>=26.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mutmut>=2.4.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]
# Note: mythril has conflicting dependencies with slither-analyzer.
# Install separately in isolated environment: pip install mythril
# Or use Docker: docker run -it mythril/myth analyze <contract.sol>
symbolic = [
]
web3 = [
    "web3>=6.0.0",
]
docs = [
    # Sphinx for API documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-autobuild>=2024.0.0",
    # MkDocs for user guides (optional)
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-minify-plugin>=0.8.0",
]
metrics = [
    "prometheus-client>=0.19.0",
]
cli = [
    "rich>=13.0.0",
]
watch = [
    "watchdog>=3.0.0",
]
mcp = [
    "mcp[cli]>=1.0.0",
]
# PDF report generation (requires system dependencies: pango, cairo)
# macOS: brew install pango cairo
# Ubuntu: apt-get install libpango-1.0-0 libcairo2
pdf = [
    "weasyprint>=60.0",
    "markdown>=3.5.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
]
# RAG with embeddings and vector database
rag = [
    "chromadb>=0.4.0",
    "rank-bm25>=0.2.2",
]
rag-embeddings = [
    "sentence-transformers>=2.2.0",
]
# Frameworks for local REST/WebSocket API servers
api = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
# Django REST API (requires Python 3.10+)
django = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
]
# Full installation with all features
full = [
    "rich>=13.0.0",
    "prometheus-client>=0.19.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "weasyprint>=60.0",
    "markdown>=3.5.0",
    # Lightweight RAG dependencies. Semantic embeddings are split into
    # rag-embeddings so CPU-only Docker builds do not accidentally pull CUDA
    # PyTorch wheels from the default package index.
    "chromadb>=0.4.0",
    "rank-bm25>=0.2.2",
    # Note: mythril excluded due to dependency conflicts
    # Install separately: pip install mythril
]
researcher = [
    "miesc[full,rag-embeddings]",
]

[project.urls]
Homepage = "https://github.com/fboiero/MIESC"
Documentation = "https://fboiero.github.io/MIESC"
Repository = "https://github.com/fboiero/MIESC.git"
"Bug Tracker" = "https://github.com/fboiero/MIESC/issues"

[project.scripts]
miesc = "miesc.cli.main:cli"
miesc-mcp = "miesc.mcp_server:main"

[project.entry-points."miesc.detectors"]
# Built-in detectors - using miesc.* namespace for proper packaging
# External packages can register their detectors here:
# flash-loan = "my_package.detectors:FlashLoanDetector"
# custom-check = "my_package.detectors:CustomDetector"
unchecked-call = "miesc.detectors.builtin:UncheckedCallDetector"
flash-loan = "miesc.detectors.builtin:FlashLoanDetector"
mev-detector = "miesc.detectors.builtin:MEVDetector"
access-control = "miesc.detectors.builtin:AccessControlDetector"

[tool.setuptools.dynamic]
version = {attr = "miesc.__version__"}

[tool.setuptools]
include-package-data = false
packages = [
    "miesc",
    "miesc.core",
    "miesc.api",
    "miesc.cli",
    "miesc.cli.commands",
    "miesc.adapters",
    "miesc.agents",
    "miesc.security",
    "miesc.ml",
    "miesc.mcp",
    "miesc.llm",
    "miesc.detectors",
    "miesc.plugins",
    "miesc.plugins.templates",
    "src",
    "miesc.adapters",
    "miesc.agents",
    "miesc.agents.audit_readiness",
    "src.benchmark",
    "src.cache",
    "src.core",
    "src.detectors",
    "src.evaluation",
    "src.formal",
    "src.integration",
    "src.knowledge_base",
    "miesc.llm",
    "src.mcp_core",
    "miesc.ml",
    "miesc.ml.fine_tuning",
    "src.plugins",
    "src.poc",
    "src.poc.validators",
    "src.reports",
    "miesc.security",
    "src.utils",
]

[tool.setuptools.package-data]
miesc = [
    "data/templates/reports/*.md",
    "data/config/*.yaml",
]
"src.knowledge_base" = [
    "*.json",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
# F401: Module imported but unused - needed for conditional availability checks
# E741: Ambiguous variable name - used in list comprehensions for clarity
# F841: Local variable assigned but never used - for future use or debugging
"miesc/api/rest.py" = ["F401", "E741", "F841"]
"miesc/cli/main.py" = ["F401", "E741", "F841"]
"tests/test_rest_api.py" = ["F401"]
# Tests frequently define helpers with single-letter names, redefine classes
# by coverage group, and use throwaway expressions. These are stylistic-only
# and do not affect production code.
"tests/*.py" = ["E402", "E741", "F811", "B018"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.2"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
    "ignore::DeprecationWarning:src",
    "ignore::DeprecationWarning:sqlalchemy",
    "ignore::DeprecationWarning:datetime",
    "ignore:The `declarative_base.*:DeprecationWarning",
    "ignore::ResourceWarning",
    "ignore::RuntimeWarning:asyncio",
]

[tool.coverage.run]
source = ["src"]
omit = [
    # Wrapper package (re-exports from src/)
    "miesc/*",
    # Legacy standalone tools (deprecated in v4.0+)
    "src/*_tool.py",
    "src/main.py",
    "src/utils.py",
    # Legacy core modules covered indirectly by public entrypoints
    "src/miesc_core.py",
    "src/miesc_policy_mapper.py",
    "src/miesc_risk_engine.py",
    # Legacy analysis modules
    "src/orchestrator.py",
    "src/project_analyzer.py",
    "src/report_formatter.py",
    "src/audit_generator.py",
    "src/graph_visualizer.py",
    # Internal test fixtures
    "src/miesc_tests/*",
    # Detectors with external dependencies
    # smartbugs_detectors engine is pure-python (regex); covered ~93% by
    # test_smartbugs_detectors.py (remaining lines are deep per-detector defensive
    # branches) -> kept in coverage rather than hidden behind a false external-tool omit.
    # Duplicate/backup files
    # Additional legacy/utility modules (v3.x)
    "src/GPTLens_prompts.py",
    "src/summarize_information.py",
    "src/test_generator.py",
    "src/text_generator.py",
    # Experimental agents (not production)
    "src/agents/crewai_coordinator.py",
    "src/agents/slither_protocol_agent.py",
    # Tool wrapper agents (require external tools: Mythril, Echidna, etc.)
    "src/agents/dynamic_agent.py",
    "src/agents/formal_agent.py",
    "src/agents/symbolic_agent.py",
    "src/agents/coordinator_agent.py",
    "src/agents/static_agent.py",
    "src/agents/gptscan_agent.py",
    "src/agents/halmos_agent.py",
    "src/agents/medusa_agent.py",
    "src/agents/smtchecker_agent.py",
    "src/agents/wake_agent.py",
    # LLM-dependent agents (require Ollama/external models)
    "src/agents/ollama_agent.py",
    "src/agents/llm_smartaudit_agent.py",
    # Analysis agents (complex orchestration dependencies)
    "src/agents/policy_agent.py",
    "src/agents/interpretation_agent.py",
    "src/agents/recommendation_agent.py",
    # Audit readiness module (specialized)
    "src/agents/audit_readiness/*",
    # LLM helpers (external dependency heavy)
    "src/llm/*",
    # Integration module (requires full stack)
    "src/integration/*",
    # Dependency analyzer (specialized)
    # dependency_analyzer is pure-python (regex supply-chain analysis); unit-tested by
    # test_dependency_analyzer.py -> kept in coverage.
    # Tool adapters (require external CLI tools)
    "src/adapters/certora_adapter.py",
    "src/adapters/echidna_adapter.py",
    "src/adapters/foundry_adapter.py",
    "src/adapters/halmos_adapter.py",
    "src/adapters/manticore_adapter.py",
    "src/adapters/medusa_adapter.py",
    "src/adapters/mythril_adapter.py",
    "src/adapters/oyente_adapter.py",
    "src/adapters/slither_adapter.py",
    "src/adapters/smtchecker_adapter.py",
    "src/adapters/vertigo_adapter.py",
    "src/adapters/wake_adapter.py",
    # mev_detector_adapter is pure-python (regex MEV patterns); fully unit-tested by
    # test_mev_detector_adapter.py -> kept in coverage.
    # gas_analyzer_adapter is pure-python (regex gas anti-patterns); fully unit-tested
    # by test_gas_analyzer_adapter.py -> kept in coverage.
    # ML/LLM adapters (require external models)
    "src/adapters/dagnn_adapter.py",
    "src/adapters/dogefuzz_adapter.py",
    "src/adapters/smartguard_adapter.py",
    "src/adapters/smartllm_adapter.py",
    "src/adapters/llmsmartaudit_adapter.py",
    "src/adapters/gptscan_adapter.py",
    "src/adapters/propertygpt_adapter.py",
    # smartbugs_ml_adapter: numpy/sklearn are only probed for availability; inference is
    # rule-based, fully unit-tested by test_smartbugs_ml_adapter.py -> kept in coverage.
    # smartbugs_detector_adapter wraps the in-tree SmartBugsDetectorEngine (pure regex);
    # fully unit-tested by test_smartbugs_detector_adapter.py -> kept in coverage.
    # contract_clone_detector_adapter is pure-python (hashlib+regex similarity); fully
    # unit-tested by test_contract_clone_detector_adapter.py -> kept in coverage.
    # defi_adapter wraps the in-tree DeFiDetectorEngine (pure regex); fully unit-tested
    # by test_defi_adapter.py -> kept in coverage.
    # advanced_detector_adapter wraps the in-tree AdvancedDetectorEngine (pure regex);
    # fully unit-tested by test_advanced_detector_adapter.py -> kept in coverage.
    # threat_model_adapter is pure-python (regex STRIDE/DREAD); fully unit-tested by
    # test_threat_model_adapter.py -> kept in coverage.
    "src/adapters/aderyn_adapter.py",
    # New v5.0.0 adapters (require external tools/models)
    "src/adapters/fouranalyzer_adapter.py",
    "src/adapters/pakala_adapter.py",
    "src/adapters/scribble_adapter.py",
    "src/adapters/solcmc_adapter.py",
    # gptlens, llamaaudit, iaudit, peculiar - covered by test_v500_adapters.py
    # upgradability_checker_adapter is pure-python (no external CLI tool) and fully
    # unit-tested by test_upgradability_checker_adapter.py -> kept in coverage.
    # bridge_monitor_adapter is pure-python (no external CLI tool) and fully unit-tested
    # by test_bridge_monitor_adapter.py -> kept in coverage.
    # l2_validator_adapter is pure-python (no external CLI tool) and fully unit-tested
    # by test_l2_validator_adapter.py -> kept in coverage.
    # circom_analyzer_adapter: circomspect CLI branch is mocked, the rest is pure regex
    # analysis, fully unit-tested by test_circom_analyzer_adapter.py -> kept in coverage.
    # audit_consensus - covered by test_v500_adapters.py
    # exploit_synthesizer_adapter: forge _run_poc branch is mocked, PoC generation /
    # interface extraction / normalization are pure, fully unit-tested by
    # test_exploit_synthesizer_adapter.py -> kept in coverage.
    # vuln_verifier_adapter uses z3 (a Python library, present in the env -> not an
    # external CLI tool) and is fully unit-tested by test_vuln_verifier_adapter.py.
    # remediation_validator_adapter is pure-python (no external CLI tool / no z3) and
    # fully unit-tested by test_remediation_validator_adapter.py -> kept in coverage.
    # Core modules with external dependencies
    # ml_orchestrator is pure-python (tool orchestration); ~95%+ covered by
    # test_core.py/test_scalability.py -> kept in coverage.
    # optimized_orchestrator is pure-python (cache + parallel tool orchestration);
    # covered by test_core.py -> kept in coverage.
    # config_loader is pure-python (yaml/dataclasses); fully unit-tested by
    # test_config_loader.py -> kept in coverage.
    # agent_protocol is the pure-python agent contract (ABC + dataclasses); covered by
    # test_core.py/test_agents.py, abstract bodies auto-excluded -> kept in coverage.
    # agent_registry is pure-python (dynamic import discovery); fully unit-tested by
    # test_agent_registry.py -> kept in coverage.
    # exporters is pure-python (json/xml/dataclasses); fully unit-tested by
    # test_exporters.py -> kept in coverage.
    # tool_protocol is the foundational tool contract (dataclasses/enums/registry +
    # adapter helpers); unit-tested by test_tool_protocol.py -> kept in coverage.
    # rich_cli is pure-python (rich wrappers); fully unit-tested by test_rich_cli.py
    # -> kept in coverage.
    # MCP modules (require full stack)
    # context_bus is pure-python (async message bus); fully unit-tested by test_mcp.py
    # -> kept in coverage.
    # ML modules with external dependencies
    # correlation_engine is pure-python (correlation/dedup/exploit-chain logic);
    # ~95% covered by test_correlation_engine.py (remaining lines are scattered
    # defensive branches) -> kept in coverage rather than hidden behind a false omit.
    # Agent modules
    # base_agent is the pure-python agent base (ABC + bus wiring); fully unit-tested by
    # test_agents.py, abstract bodies auto-excluded -> kept in coverage.
    "src/agents/ai_agent.py",
    "src/agents/aderyn_agent.py",
    "src/agents/smartllm_agent.py",
    # Detector modules
    # advanced_detectors engine is pure-python (regex); covered by test_detectors.py +
    # test_advanced_detector_adapter.py -> kept in coverage.
    # defi_detectors engine is pure-python (regex); covered by test_defi_adapter.py
    # -> kept in coverage.
    # Knowledge base
    "src/knowledge_base/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
fail_under = 79  # Coverage target: ~80% (fluctuates with new code)
show_missing = true

# ============================================
# MUTATION TESTING (mutmut)
# ============================================
# Run with: mutmut run
# View results: mutmut results
# HTML report: mutmut html
# ============================================

[tool.mutmut]
# Paths to mutate
paths_to_mutate = "src/"

# Test runner configuration
runner = "python -m pytest tests/ -x --no-cov -q"

# Files to exclude from mutation
paths_to_exclude = [
    "src/*_tool.py",
    "src/miesc_*.py",
    "src/detectors/smartbugs_detectors.py",
    "src/agents/crewai_coordinator.py",
    "src/miesc_tests/",
]

# Test timeout per mutation (seconds)
# Mutations that cause tests to hang will be killed
timeout_multiplier = 2.0

# Disable mutations for specific patterns
disable_mutation_types = [
    # These often produce equivalent mutants
    "string",
    "fstring",
    "annotation",
]

# Minimum score threshold (percentage of mutations killed)
# Used by make mutate-check target
# score_threshold = 60
