[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miesc"
dynamic = ["version"]
description = "Multi-layer Intelligent Evaluation for Smart Contracts - Open-source framework that brings enterprise-grade security analysis to every developer"
readme = "README.md"
authors = [
    {name = "Fernando Boiero", email = "fboiero@frvm.utn.edu.ar"}
]
license = "AGPL-3.0-only"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
keywords = [
    "blockchain",
    "ethereum",
    "smart-contracts",
    "security",
    "static-analysis",
    "formal-verification",
    "vulnerability-detection",
    "mcp",
    "model-context-protocol"
]
requires-python = ">=3.12"
# Core dependencies - minimal for CLI usage
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "slither-analyzer>=0.10.0",
    # Required for CLI output (137 console.print sites across miesc/cli/commands/).
    # Without rich the analyze/report/audit commands crash with
    # AttributeError: 'NoneType' object has no attribute 'print'.
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<10",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "black>=26.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mutmut>=3.6.0",  # 3.x rewrite; 2.5.1 crashes under Python 3.14 (itertools.count pickle)
    "build>=1.2.0",
    "twine>=5.0.0",
]
# Note: mythril has conflicting dependencies with slither-analyzer.
# Install separately in isolated environment: pip install mythril
# Or use Docker: docker run -it mythril/myth analyze <contract.sol>
symbolic = [
]
web3 = [
    "web3>=6.0.0",
]
docs = [
    # Sphinx for API documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-autobuild>=2024.0.0",
    # MkDocs for user guides (optional)
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-minify-plugin>=0.8.0",
]
metrics = [
    "prometheus-client>=0.19.0",
]
cli = [
    "rich>=13.0.0",
]
watch = [
    "watchdog>=3.0.0",
]
mcp = [
    "mcp[cli]>=1.0.0",
]
# PDF report generation (requires system dependencies: pango, cairo)
# macOS: brew install pango cairo
# Ubuntu: apt-get install libpango-1.0-0 libcairo2
pdf = [
    "weasyprint>=60.0",
    "markdown>=3.5.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
]
# RAG with embeddings and vector database
rag = [
    "chromadb>=0.4.0",
    "rank-bm25>=0.2.2",
]
rag-embeddings = [
    "sentence-transformers>=2.2.0",
]
# Frameworks for local REST/WebSocket API servers
api = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
# Django REST API (requires Python 3.10+)
django = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
]
# Full installation with all features
full = [
    "rich>=13.0.0",
    "prometheus-client>=0.19.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "weasyprint>=60.0",
    "markdown>=3.5.0",
    # Lightweight RAG dependencies. Semantic embeddings are split into
    # rag-embeddings so CPU-only Docker builds do not accidentally pull CUDA
    # PyTorch wheels from the default package index.
    "chromadb>=0.4.0",
    "rank-bm25>=0.2.2",
    # Note: mythril excluded due to dependency conflicts
    # Install separately: pip install mythril
]
researcher = [
    "miesc[full,rag-embeddings]",
]

[project.urls]
Homepage = "https://github.com/fboiero/MIESC"
Documentation = "https://fboiero.github.io/MIESC"
Repository = "https://github.com/fboiero/MIESC.git"
"Bug Tracker" = "https://github.com/fboiero/MIESC/issues"

[project.scripts]
miesc = "miesc.cli.main:cli"
miesc-mcp = "miesc.mcp_server:main"

[project.entry-points."miesc.detectors"]
# Built-in detectors - using miesc.* namespace for proper packaging
# External packages can register their detectors here:
# flash-loan = "my_package.detectors:FlashLoanDetector"
# custom-check = "my_package.detectors:CustomDetector"
unchecked-call = "miesc.detectors.builtin:UncheckedCallDetector"
flash-loan = "miesc.detectors.builtin:FlashLoanDetector"
mev-detector = "miesc.detectors.builtin:MEVDetector"
access-control = "miesc.detectors.builtin:AccessControlDetector"

[tool.setuptools.dynamic]
version = {attr = "miesc.__version__"}

[tool.setuptools]
include-package-data = false

# All source now lives under the single `miesc` package (the src/ root was
# removed on the src -> miesc unification). Auto-discover every miesc subpackage
# instead of hand-maintaining the list.
[tool.setuptools.packages.find]
include = ["miesc*"]
namespaces = false

[tool.setuptools.package-data]
miesc = [
    "data/templates/reports/*.md",
    "data/config/*.yaml",
]
"miesc.knowledge_base" = [
    "*.json",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
# F401: Module imported but unused - needed for conditional availability checks
# E741: Ambiguous variable name - used in list comprehensions for clarity
# F841: Local variable assigned but never used - for future use or debugging
"miesc/api/rest.py" = ["F401", "E741", "F841"]
"miesc/cli/main.py" = ["F401", "E741", "F841"]
"tests/test_rest_api.py" = ["F401"]
# Deprecated compat shim + knowledge_base loader import after module-level setup.
"miesc/miesc_core.py" = ["E402"]
"miesc/knowledge_base/__init__.py" = ["E402"]
# Tests frequently define helpers with single-letter names, redefine classes
# by coverage group, use throwaway expressions, and assert broad exceptions.
# These are stylistic-only and do not affect production code.
"tests/*.py" = ["E402", "E741", "F811", "B018", "B017"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.2"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
    "ignore::DeprecationWarning:src",
    "ignore::DeprecationWarning:sqlalchemy",
    "ignore::DeprecationWarning:datetime",
    "ignore:The `declarative_base.*:DeprecationWarning",
    "ignore::ResourceWarning",
    "ignore::RuntimeWarning:asyncio",
]

[tool.coverage.run]
source = ["miesc"]
omit = [
    # Legacy standalone tools (deprecated in v4.0+)
    "miesc/*_tool.py",
    "miesc/main.py",
    "miesc/utils.py",
    # Legacy core modules covered indirectly by public entrypoints
    "miesc/miesc_core.py",
    "miesc/miesc_policy_mapper.py",
    "miesc/miesc_risk_engine.py",
    # Legacy analysis modules
    "miesc/orchestrator.py",
    "miesc/project_analyzer.py",
    "miesc/report_formatter.py",
    "miesc/audit_generator.py",
    "miesc/graph_visualizer.py",
    # Internal test fixtures
    "miesc/miesc_tests/*",
    # Detectors with external dependencies
    # smartbugs_detectors engine is pure-python (regex); covered ~93% by
    # test_smartbugs_detectors.py (remaining lines are deep per-detector defensive
    # branches) -> kept in coverage rather than hidden behind a false external-tool omit.
    # Duplicate/backup files
    # Additional legacy/utility modules (v3.x)
    "miesc/GPTLens_prompts.py",
    "miesc/summarize_information.py",
    "miesc/test_generator.py",
    "miesc/text_generator.py",
    # Experimental agents (not production)
    "miesc/agents/crewai_coordinator.py",
    "miesc/agents/slither_protocol_agent.py",
    # Tool wrapper agents (require external tools: Mythril, Echidna, etc.)
    "miesc/agents/dynamic_agent.py",
    "miesc/agents/formal_agent.py",
    "miesc/agents/symbolic_agent.py",
    "miesc/agents/coordinator_agent.py",
    "miesc/agents/static_agent.py",
    "miesc/agents/gptscan_agent.py",
    "miesc/agents/halmos_agent.py",
    "miesc/agents/medusa_agent.py",
    "miesc/agents/smtchecker_agent.py",
    "miesc/agents/wake_agent.py",
    # LLM-dependent agents (require Ollama/external models)
    "miesc/agents/ollama_agent.py",
    "miesc/agents/llm_smartaudit_agent.py",
    # Analysis agents (complex orchestration dependencies)
    "miesc/agents/policy_agent.py",
    "miesc/agents/interpretation_agent.py",
    "miesc/agents/recommendation_agent.py",
    # Audit readiness module (specialized)
    "miesc/agents/audit_readiness/*",
    # LLM helpers (external dependency heavy)
    "miesc/llm/*",
    # Integration module (requires full stack)
    "miesc/integration/*",
    # Dependency analyzer (specialized)
    # dependency_analyzer is pure-python (regex supply-chain analysis); unit-tested by
    # test_dependency_analyzer.py -> kept in coverage.
    # Tool adapters (require external CLI tools)
    "miesc/adapters/certora_adapter.py",
    "miesc/adapters/echidna_adapter.py",
    "miesc/adapters/foundry_adapter.py",
    "miesc/adapters/halmos_adapter.py",
    "miesc/adapters/manticore_adapter.py",
    "miesc/adapters/medusa_adapter.py",
    "miesc/adapters/mythril_adapter.py",
    "miesc/adapters/oyente_adapter.py",
    "miesc/adapters/slither_adapter.py",
    "miesc/adapters/smtchecker_adapter.py",
    "miesc/adapters/vertigo_adapter.py",
    "miesc/adapters/wake_adapter.py",
    # mev_detector_adapter is pure-python (regex MEV patterns); fully unit-tested by
    # test_mev_detector_adapter.py -> kept in coverage.
    # gas_analyzer_adapter is pure-python (regex gas anti-patterns); fully unit-tested
    # by test_gas_analyzer_adapter.py -> kept in coverage.
    # ML/LLM adapters (require external models)
    "miesc/adapters/dagnn_adapter.py",
    "miesc/adapters/dogefuzz_adapter.py",
    "miesc/adapters/smartguard_adapter.py",
    "miesc/adapters/smartllm_adapter.py",
    "miesc/adapters/llmsmartaudit_adapter.py",
    "miesc/adapters/gptscan_adapter.py",
    "miesc/adapters/propertygpt_adapter.py",
    # smartbugs_ml_adapter: numpy/sklearn are only probed for availability; inference is
    # rule-based, fully unit-tested by test_smartbugs_ml_adapter.py -> kept in coverage.
    # smartbugs_detector_adapter wraps the in-tree SmartBugsDetectorEngine (pure regex);
    # fully unit-tested by test_smartbugs_detector_adapter.py -> kept in coverage.
    # contract_clone_detector_adapter is pure-python (hashlib+regex similarity); fully
    # unit-tested by test_contract_clone_detector_adapter.py -> kept in coverage.
    # defi_adapter wraps the in-tree DeFiDetectorEngine (pure regex); fully unit-tested
    # by test_defi_adapter.py -> kept in coverage.
    # advanced_detector_adapter wraps the in-tree AdvancedDetectorEngine (pure regex);
    # fully unit-tested by test_advanced_detector_adapter.py -> kept in coverage.
    # threat_model_adapter is pure-python (regex STRIDE/DREAD); fully unit-tested by
    # test_threat_model_adapter.py -> kept in coverage.
    "miesc/adapters/aderyn_adapter.py",
    # New v5.0.0 adapters (require external tools/models)
    "miesc/adapters/fouranalyzer_adapter.py",
    "miesc/adapters/pakala_adapter.py",
    "miesc/adapters/scribble_adapter.py",
    "miesc/adapters/solcmc_adapter.py",
    # gptlens, llamaaudit, iaudit, peculiar - covered by test_v500_adapters.py
    # upgradability_checker_adapter is pure-python (no external CLI tool) and fully
    # unit-tested by test_upgradability_checker_adapter.py -> kept in coverage.
    # bridge_monitor_adapter is pure-python (no external CLI tool) and fully unit-tested
    # by test_bridge_monitor_adapter.py -> kept in coverage.
    # l2_validator_adapter is pure-python (no external CLI tool) and fully unit-tested
    # by test_l2_validator_adapter.py -> kept in coverage.
    # circom_analyzer_adapter: circomspect CLI branch is mocked, the rest is pure regex
    # analysis, fully unit-tested by test_circom_analyzer_adapter.py -> kept in coverage.
    # audit_consensus - covered by test_v500_adapters.py
    # exploit_synthesizer_adapter: forge _run_poc branch is mocked, PoC generation /
    # interface extraction / normalization are pure, fully unit-tested by
    # test_exploit_synthesizer_adapter.py -> kept in coverage.
    # vuln_verifier_adapter uses z3 (a Python library, present in the env -> not an
    # external CLI tool) and is fully unit-tested by test_vuln_verifier_adapter.py.
    # remediation_validator_adapter is pure-python (no external CLI tool / no z3) and
    # fully unit-tested by test_remediation_validator_adapter.py -> kept in coverage.
    # Core modules with external dependencies
    # ml_orchestrator is pure-python (tool orchestration); ~95%+ covered by
    # test_core.py/test_scalability.py -> kept in coverage.
    # optimized_orchestrator is pure-python (cache + parallel tool orchestration);
    # covered by test_core.py -> kept in coverage.
    # config_loader is pure-python (yaml/dataclasses); fully unit-tested by
    # test_config_loader.py -> kept in coverage.
    # agent_protocol is the pure-python agent contract (ABC + dataclasses); covered by
    # test_core.py/test_agents.py, abstract bodies auto-excluded -> kept in coverage.
    # agent_registry is pure-python (dynamic import discovery); fully unit-tested by
    # test_agent_registry.py -> kept in coverage.
    # exporters is pure-python (json/xml/dataclasses); fully unit-tested by
    # test_exporters.py -> kept in coverage.
    # tool_protocol is the foundational tool contract (dataclasses/enums/registry +
    # adapter helpers); unit-tested by test_tool_protocol.py -> kept in coverage.
    # rich_cli is pure-python (rich wrappers); fully unit-tested by test_rich_cli.py
    # -> kept in coverage.
    # MCP modules (require full stack)
    # context_bus is pure-python (async message bus); fully unit-tested by test_mcp.py
    # -> kept in coverage.
    # ML modules with external dependencies
    # correlation_engine is pure-python (correlation/dedup/exploit-chain logic);
    # ~95% covered by test_correlation_engine.py (remaining lines are scattered
    # defensive branches) -> kept in coverage rather than hidden behind a false omit.
    # Agent modules
    # base_agent is the pure-python agent base (ABC + bus wiring); fully unit-tested by
    # test_agents.py, abstract bodies auto-excluded -> kept in coverage.
    "miesc/agents/ai_agent.py",
    "miesc/agents/aderyn_agent.py",
    "miesc/agents/smartllm_agent.py",
    # Detector modules
    # advanced_detectors engine is pure-python (regex); covered by test_detectors.py +
    # test_advanced_detector_adapter.py -> kept in coverage.
    # defi_detectors engine is pure-python (regex); covered by test_defi_adapter.py
    # -> kept in coverage.
    # Knowledge base
    "miesc/knowledge_base/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
fail_under = 80  # Coverage target: locked at 80% (real coverage ~81.1%)
show_missing = true

# ============================================
# MUTATION TESTING (mutmut 3.x)
# ============================================
# Run with:      mutmut run
# View results:  mutmut results        (lists surviving mutants)
# CI/CD stats:   mutmut export-cicd-stats  -> mutants/mutmut-cicd-stats.json
# ============================================
# mutmut 3.x notes (see docs/roadmap/MUTATION_STATUS_20260712.md):
#   - The whole `miesc/` package is copied into a mutants/ sandbox so imports
#     resolve; `only_mutate` then restricts which files actually get mutated.
#   - Runs are scoped to the well-tested v6 core modules that carry dedicated,
#     mutation-grade test suites. Broadening the mutation surface is future work.
#   - mutmut 3.x runs pytest in-process (no `python -m pytest` subprocess), so
#     it does not depend on `python` being on PATH.

[tool.mutmut]
# Copy the full package (imports must resolve inside the mutants/ sandbox)...
source_paths = ["miesc/"]
# ...but only mutate the v6 core modules that have dedicated mutation-grade tests.
only_mutate = [
    "miesc/core/baseline.py",
    "miesc/core/code_actions.py",
    "miesc/formal/unified_report.py",
]
# Scope the test run to the matching suites for fast, representative feedback.
pytest_add_cli_args_test_selection = [
    "tests/test_baseline.py",
    "tests/test_code_actions.py",
    "tests/test_unified_report.py",
]
pytest_add_cli_args = ["--no-cov", "-p", "no:cacheprovider"]
timeout_multiplier = 2.0
